[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/themeMFRG.tres" type="Theme" id=1]
[ext_resource path="res://scenes/themeMFRGLabelDark.tres" type="Theme" id=2]
[ext_resource path="res://scripts/main_menu/ng_conf_screen.gd" type="Script" id=3]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("ViewportContainer/Viewport")

[node name="ControlNG" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1920, 1080 )
handle_input_locally = false
render_target_v_flip = true
render_target_update_mode = 3

[node name="CanvasLayer" type="CanvasLayer" parent="ViewportContainer/Viewport"]

[node name="ColorRect" type="ColorRect" parent="ViewportContainer/Viewport/CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -940.0
margin_top = -520.0
margin_right = 940.0
margin_bottom = 520.0
theme = ExtResource( 2 )
color = Color( 0, 0, 0, 0.509804 )

[node name="VBoxContainer" type="VBoxContainer" parent="ViewportContainer/Viewport/CanvasLayer/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -820.0
margin_top = -400.0
margin_right = 820.0
margin_bottom = 400.0

[node name="LabelResolution" type="Label" parent="ViewportContainer/Viewport/CanvasLayer/ColorRect/VBoxContainer"]
margin_right = 1640.0
margin_bottom = 84.0
theme = ExtResource( 1 )
text = "LABEL_NEW_GAME"
align = 1
valign = 1
autowrap = true

[node name="B_YES" type="Button" parent="ViewportContainer/Viewport/CanvasLayer/ColorRect/VBoxContainer"]
margin_top = 88.0
margin_right = 1640.0
margin_bottom = 172.0
theme = ExtResource( 1 )
text = "ButtonYes"

[node name="B_NO" type="Button" parent="ViewportContainer/Viewport/CanvasLayer/ColorRect/VBoxContainer"]
margin_top = 176.0
margin_right = 1640.0
margin_bottom = 260.0
theme = ExtResource( 1 )
text = "ButtonNo"

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = SubResource( 1 )

[connection signal="pressed" from="ViewportContainer/Viewport/CanvasLayer/ColorRect/VBoxContainer/B_YES" to="." method="_on_B_YES_pressed"]
[connection signal="pressed" from="ViewportContainer/Viewport/CanvasLayer/ColorRect/VBoxContainer/B_NO" to="." method="_on_B_NO_pressed"]
